style/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Raleway:wght@400;500&display=swap");
:root {
  --data-color-primary: #ffffff;
  --data-color-secondary: #0A0547;
  --data-color-accent: #0057FF;
}

* {
  padding: 0;
  margin: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  scroll-behavior: smooth;
  font-family: "Poppins";
}

.wrapper {
  width: 100%;
  background-color: var(--data-color-primary);
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 0 auto;
  overflow: hidden;
}

.navbar {
  margin: 2em;
}

.navbar-brand,
.nav-link {
  margin: 0 1.45em 0 0;
}

.firstSection {
  width: 100%;
  margin: 3em auto;
  text-align: center;
}

.url {
  text-decoration: none;
}

.myImg {
  width: 180px;
  height: 180px;
  border-radius: 50%;
}

.welcome-text {
  font-family: 'Raleway';
  font-weight: 400;
  font-size: 34px;
  line-height: 52px;
  letter-spacing: 0.25px;
  margin: 1em 0;
  text-transform: capitalize;
}

.button {
  text-decoration: none;
  border-radius: 6px;
  padding: 0.8em 1.8em;
  background-color: var(--data-color-accent);
  color: var(--data-color-primary);
}

.button:hover {
  color: var(--data-color-primary);
}

.button span {
  font-weight: 600;
  font-size: 14px;
  letter-spacing: 1.25px;
  text-transform: uppercase;
}

.caseStudySection {
  width: 100%;
}

.caseStudyEnlarge {
  width: 100%;
  height: auto;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  text-align: center;
  justify-items: center;
  margin: 0em auto;
}

.caseStudyEnlarge img {
  margin: 2em auto;
  width: 80%;
}

.caseStudySmall {
  display: none;
}

/* Previous Version
.caseStudy {
    margin: 2em;
    width: 500px;
    height: auto;
    background-color: var(--data-color-primary);
    color: var(--data-color-secondary);
}

.postCover {
    width: 100%;
    height: 280px;
    background-position: center center;
    object-fit: cover;
    object-position: center;
    border-radius: 10px;
}
*/
.caseStudyInfo {
  margin: 15px 0 0 10px;
  text-align: left;
}

.title {
  font-family: 'Poppins';
  color: var(--data-color-secondary);
  font-weight: 500;
  font-size: 20px;
  line-height: 40px;
  letter-spacing: 0.15px;
}

.subtitle {
  font-family: 'Poppins';
  color: var(--data-color-secondary);
  font-weight: 200;
  font-size: 16px;
  line-height: 36px;
  letter-spacing: 0.5px;
  opacity: 0.6;
}

.readmore {
  font-family: 'Poppins';
  color: var(--data-color-accent);
  font-weight: 500;
  font-size: 16px;
  line-height: 40px;
  letter-spacing: 0.25px;
}

.readmore img {
  width: 20px;
}

@media only screen and (max-width: 700px) {
  .button {
    padding: 0.45em 0.85em;
  }
  .button span {
    font-size: 10px;
  }
  .myImg {
    width: 120px;
    height: 120px;
  }
  .welcome-text {
    font-size: 24px;
    line-height: 38px;
    letter-spacing: 0.15px;
  }
  .caseStudyEnlarge {
    display: none;
  }
  .caseStudySmall {
    display: block;
    margin: 2em auto;
    width: 80%;
    height: auto;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    text-align: center;
    justify-items: center;
    margin: 0em auto;
  }
  .caseStudySmall .instyleCover,
  .forbesCover {
    width: 100%;
  }
  .caseStudySmall .caseStudy {
    margin-top: 3em;
  }
}
/*# sourceMappingURL=style.css.map */

